# solidcore

./: .gitignore  dev-requirements.txt  env.sh  pyproject.toml  pytest.ini
src-dev/: bootstrap.py
src-dev/dev/: __init__.py  __main__.py  logconf.py  sh.py
src/solidcore/: cli.py
tests/: conftest.py  test_example.py  test_sample.py
