[build-system]
requires = ['setuptools', 'setuptools-scm', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'solidcore'
dynamic = ['version']
readme = 'README.md'
requires-python = '>=3.9'
authors = [
    {name='Solid Core', email='solid@co.re'}
]
dependencies = [
    'click',
]

[project.scripts]
solidcore = 'solidcore.cli:cli'

[tool.setuptools.dynamic]
version = {attr = 'solidcore.__version__'}

[tool.setuptools.packages.find]
where = ['src']
